# NeuraTask

Final_Solution/edge_detection/: CMakeLists.txt  requirements.txt.txt
Final_Solution/edge_detection/readme/readme/: Readme.md
Final_Solution/edge_detection/src/: EdgeDetector.cpp  edge_detector.py
Final_Solution/localization_challenge/Readme/: Readme.md
Final_Solution/localization_challenge/localization_challenge/: Makefile  localization_test  main  main.cpp  main.h  robot_defs.h
Final_Solution/localization_challenge/localization_challenge_EKFKalman/: Makefile  main.cpp  robot_defs.h
